<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/space_lg">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_lg"
            android:text="@string/privacy_title"
            android:textAppearance="@style/TextAppearance.ScreenLens.Headline" />

        <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/space_md"
            android:text="@string/privacy_body_1" android:textAppearance="@style/TextAppearance.ScreenLens.Body" />
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/space_md"
            android:text="@string/privacy_body_2" android:textAppearance="@style/TextAppearance.ScreenLens.Body" />
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/space_md"
            android:text="@string/privacy_body_3" android:textAppearance="@style/TextAppearance.ScreenLens.Body" />
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/space_md"
            android:text="@string/privacy_body_4" android:textAppearance="@style/TextAppearance.ScreenLens.Body" />
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/space_md"
            android:text="@string/privacy_body_5" android:textAppearance="@style/TextAppearance.ScreenLens.Body" />
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/space_md"
            android:text="@string/privacy_body_6" android:textAppearance="@style/TextAppearance.ScreenLens.Body" />
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/space_md"
            android:text="@string/privacy_body_7" android:textAppearance="@style/TextAppearance.ScreenLens.Body" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
