<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_lg"
        android:layout_marginTop="@dimen/space_lg"
        android:text="@string/history_title"
        android:textAppearance="@style/TextAppearance.ScreenLens.Headline" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_lg"
        app:boxCornerRadiusBottomEnd="@dimen/radius_md"
        app:boxCornerRadiusBottomStart="@dimen/radius_md"
        app:boxCornerRadiusTopEnd="@dimen/radius_md"
        app:boxCornerRadiusTopStart="@dimen/radius_md"
        app:startIconDrawable="@drawable/ic_nav_history">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/searchInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/history_search_hint"
            android:inputType="text"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/filterChipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_lg"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipAll"
                style="@style/Widget.ScreenLens.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/filter_all" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipScreen"
                style="@style/Widget.ScreenLens.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_screen" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipImage"
                style="@style/Widget.ScreenLens.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_image" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipCamera"
                style="@style/Widget.ScreenLens.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_camera" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipClipboard"
                style="@style/Widget.ScreenLens.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_clipboard" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipTranslation"
                style="@style/Widget.ScreenLens.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_translation" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipQr"
                style="@style/Widget.ScreenLens.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_qr" />

        </com.google.android.material.chip.ChipGroup>

    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/historyList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:paddingHorizontal="@dimen/space_lg"
        android:paddingTop="@dimen/space_sm"
        tools:listitem="@layout/item_history_card" />

    <TextView
        android:id="@+id/emptyText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/history_empty"
        android:textAppearance="@style/TextAppearance.ScreenLens.BodySecondary"
        android:visibility="gone" />

</LinearLayout>
