<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    android:orientation="vertical"
    android:padding="@dimen/space_lg">

    <com.google.android.material.card.MaterialCardView
        style="@style/Widget.ScreenLens.Card"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clipboard_text_label"
                android:textAppearance="@style/TextAppearance.ScreenLens.Label" />

            <TextView
                android:id="@+id/clipboardText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_sm"
                android:text="@string/clipboard_empty"
                android:textAppearance="@style/TextAppearance.ScreenLens.Body"
                android:textIsSelectable="true" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/checkClipboardButton"
        style="@style/Widget.ScreenLens.Button.Secondary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_lg"
        android:text="@string/action_check_clipboard" />

    <Button
        android:id="@+id/translateButton"
        style="@style/Widget.ScreenLens.Button.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_sm"
        android:enabled="false"
        android:text="@string/action_translate" />

</LinearLayout>
